depends_compile_tests/tests/fail/derive/value/bad_attrs.rs
use depends::derives::Value;

#[derive(Value)]
#[depends(unhashable = true)]
struct Foo {
    bar: Vec<usize>,
}

fn main() {}
