depends_compile_tests/tests/fail/derive/value/bad_attrs.stderr
error: expected `,`
 --> tests/fail/derive/value/bad_attrs.rs:4:22
  |
4 | #[depends(unhashable = true)]
  |                      ^
